GIT IGNORE DOESNT WORK

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ xcuserdata/
 !*.xcodeproj/xcshareddata/
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
-!*.xcworkspace/xcuserdata/sakshamgupta.xcuserdatad/UserInterfaceState.xcuserstate
+**/xcuserdata/*
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
 *.xccheckout
